[gd_scene load_steps=14 format=2]

[ext_resource path="res://_Game/Models/table_electric_desk_corner/mdl_table_electric_desk_corner.glb" type="PackedScene" id=1]
[ext_resource path="res://_Game/Shared/Material/mat_electric_room_tables.tres" type="Material" id=2]
[ext_resource path="res://_Game/Scenes/Models/mdl_dev_basic_pc.tscn" type="PackedScene" id=3]
[ext_resource path="res://_Game/Scripts/scr_adjustable_table.gd" type="Script" id=4]
[ext_resource path="res://_Game/Scenes/Models/mdl_dev_compact_milling_mch_srm-20_ani.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0633745, 0.543369, 0.391637 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.0515089, 0.396622, 0.577406 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.0315144, 0.483024, 0.420104 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.9, 0.06, 0.06 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.9, 0.06, 0.06 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.017797, 0.415949, 0.0475926 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.017797, 0.415949, 0.0475926 )

[sub_resource type="Animation" id=8]
resource_name = "01_height_adjust"
length = 4.16667
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:height_adjust_bottom_end")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, -2.21982e-11, -2.08357e-09, -7.10543e-15, 2.84217e-14, 5.96047e-08, 1, 1, 1, 1, 4.16667, 1, 0, -2.21982e-11, -2.08355e-09, -7.10543e-15, 2.84217e-14, 5.96047e-08, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:height_adjust_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, -1.49012e-08, 1.19059e-08, 2.38518e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.0666667, 1, 0.000262722, 1.19055e-08, 2.3859e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.133333, 1, 0.000966266, 1.19043e-08, 2.38787e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.2, 1, 0.0021327, 1.19023e-08, 2.3911e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.266667, 1, 0.00374529, 1.18995e-08, 2.39557e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.333333, 1, 0.00575615, 1.1896e-08, 2.40114e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 4.16667, 1, 0.31669, 1.1361e-08, 3.26367e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:height_adjust_middle_end")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 0, -2.22027e-11, -2.08357e-09, -7.10543e-15, 1.42109e-14, 5.96047e-08, 1, 1, 1, 1, 4.16667, 1, 0, -2.21991e-11, -2.08355e-09, -7.10543e-15, 1.42109e-14, 5.96047e-08, 1, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:height_adjust_middle")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, -1.49012e-08, -4.46555e-09, -1.02611e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.0666667, 1, 0.000210091, -4.49732e-09, -9.7489e-10, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.133333, 1, 0.000772685, -4.5824e-09, -8.37733e-10, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.2, 1, 0.00170548, -4.72346e-09, -6.10346e-10, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.266667, 1, 0.00299503, -4.91847e-09, -2.95991e-10, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 0.333333, 1, 0.00460307, -5.16164e-09, 9.6005e-11, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1, 4.16667, 1, 0.253251, 1.68418e-08, 1.1051e-09, 3.08286e-44, 1.32349e-23, 2.31611e-23, 1, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("Armature/Skeleton:height_adjust_main_end")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 0, -2.22027e-11, -2.08357e-09, -7.10543e-15, 2.84217e-14, 5.96047e-08, 1, 1, 1, 1, 4.16667, 1, 5.96046e-08, -2.21974e-11, 1.28176e-08, -7.10543e-15, 2.84217e-14, 5.96047e-08, 1, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("Armature/Skeleton:height_adjust_main")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 0, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 0.0666667, 1, -0.000476599, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 0.133333, 1, -0.00175297, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 0.2, 1, -0.003869, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 0.266667, 1, -0.00679439, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 0.333333, 1, -0.0104423, 0, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1, 4.16667, 1, -0.574512, 5.96046e-08, 0, -1.1454e-14, 7.10543e-15, -5.96047e-08, 1, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("Armature/Skeleton:root_end")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 4.16667, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("Armature/Skeleton:root")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 4.16667, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[node name="mdl_table_electric_desk_corner" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="mdl" parent="Armature/Skeleton" index="0"]
material/0 = ExtResource( 2 )

[node name="BoneAttachment" type="BoneAttachment" parent="Armature/Skeleton" index="1"]
transform = Transform( 0, 1, 7.10543e-15, -1, 0, 1.92167e-07, 1.92167e-07, -7.10543e-15, 1, -0.502147, 0.676381, 0.211474 )
bone_name = "height_adjust_main"

[node name="mdl_dev_compact_milling_mch_srm-20" parent="Armature/Skeleton/BoneAttachment" index="0" instance=ExtResource( 5 )]
transform = Transform( -2.90165e-14, -1, -1.92167e-07, -1, -1.36543e-21, 1.50996e-07, -1.50996e-07, 1.92167e-07, -1, -0.0793362, 0.940398, 0.164482 )

[node name="TableBody" type="StaticBody" parent="Armature/Skeleton/BoneAttachment" index="1" groups=["Mover"]]
transform = Transform( 1, -1.42109e-14, 4.26326e-14, 1.42109e-14, 1, -4.23516e-21, -1.42109e-14, -4.23516e-21, 1, -0.00151753, 5.96046e-08, 1.49012e-08 )
collision_layer = 19

[node name="TableTopLeft" type="CollisionShape" parent="Armature/Skeleton/BoneAttachment/TableBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00845999, 0.765601, 0.232745 )
shape = SubResource( 1 )

[node name="TableTopRight" type="CollisionShape" parent="Armature/Skeleton/BoneAttachment/TableBody" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0188325, 0.0730697, -0.444248 )
shape = SubResource( 2 )

[node name="TableTopCenter" type="CollisionShape" parent="Armature/Skeleton/BoneAttachment/TableBody" index="2"]
transform = Transform( 1, 1.35883e-07, -5.62844e-08, -1.35883e-07, 0.707107, -0.707107, -5.62844e-08, 0.707107, 0.707107, -0.0395129, 0.244649, 0.102192 )
shape = SubResource( 3 )

[node name="LegPoleLeft" type="CollisionShape" parent="Armature/Skeleton/BoneAttachment/TableBody" index="3"]
transform = Transform( 0.999997, -2.98428e-13, 5.96856e-13, 2.98428e-13, 0.999997, -7.03037e-20, -1.13687e-13, -1.02491e-19, 1, 0.87, 0.838, 0.446 )
shape = SubResource( 4 )

[node name="LegPoleRight" type="CollisionShape" parent="Armature/Skeleton/BoneAttachment/TableBody" index="4"]
transform = Transform( 0.999999, -8.52651e-14, 1.7053e-13, 8.52651e-14, 0.999999, -1.94818e-20, -2.84217e-14, -2.96462e-20, 1, 0.869807, 0.0348334, -0.731984 )
shape = SubResource( 5 )

[node name="mdl_dev_basic_pc" parent="Armature/Skeleton/BoneAttachment" index="2" instance=ExtResource( 3 )]
transform = Transform( -1.12035e-07, -0.999999, -1.96436e-07, -0.47699, -1.19209e-07, 0.878908, -0.878909, 1.92167e-07, -0.47699, -0.0691626, 0.236093, -0.0192423 )

[node name="LowerLegs" type="StaticBody" parent="Armature/Skeleton" index="2"]
collision_layer = 3

[node name="LegHorizontalLeft" type="CollisionShape" parent="Armature/Skeleton/LowerLegs" index="0"]
transform = Transform( -1.19209e-07, 0.882944, 0.46947, -0.999996, -1.95471e-07, 1.13708e-07, 1.92166e-07, -0.469471, 0.882947, 0.453559, 0.01429, 0.59347 )
shape = SubResource( 6 )

[node name="LegHorizontalRight" type="CollisionShape" parent="Armature/Skeleton/LowerLegs" index="1"]
transform = Transform( -1.75403e-07, -0.642786, -0.766043, -0.999998, 2.44287e-07, 2.39911e-08, 1.71714e-07, 0.766044, -0.642787, -0.3912, 0.013316, -0.61097 )
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="." index="1"]
anims/01_height_adjust = SubResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]
transform = Transform( -0.969046, -0.10976, 0.22114, 0, 0.895735, 0.444588, -0.246881, 0.430826, -0.868008, 0.347355, 0.698337, -1.36342 )
shadow_enabled = true

[connection signal="mouse_entered" from="Armature/Skeleton/BoneAttachment/TableBody" to="." method="enter_focus"]
[connection signal="mouse_exited" from="Armature/Skeleton/BoneAttachment/TableBody" to="." method="exit_focus"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
